[workspace]
resolver = "2"
members = [
    "uno",
]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
repository = "https://github.com/gents83/arduino-rs"
keywords = ["arduino", "rust", "unor3"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
arduino-hal = { git = "https://github.com/rahix/avr-hal", features = ["arduino-uno"] }

