[package]
name = "uno"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[[bin]]
name = "uno"
test = false
bench = false

[dependencies]
panic-halt = { workspace = true }
ufmt = { workspace = true }
nb = { workspace = true }
embedded-hal = { workspace = true }
arduino-hal = { workspace = true }
ravedude = "0.1.6"
